[package]
name = "nft-defi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_defi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
# mpl-token-metadata = { version = "5.1.0" } #, features = ["no-entrypoint"] }
